Se agregaron las pilas (programa al 95%)

--- a/Layout/MainLayout.razor
+++ b/Layout/MainLayout.razor
@@ -3,7 +3,7 @@
 
     <header class="header">
         <div class="text-header">
-            <h1>Bolex</h1>
+            <h1>Bol-x</h1>
         </div>
         
     </header>
