--- a/Paginas_Boletos/PaginaGeneral.razor
+++ b/Paginas_Boletos/PaginaGeneral.razor
@@ -13,6 +13,7 @@
     <div class="Contenedor-sesion">
         <div class="form-container">
             <p class="title">Compra General</p>
+            <p>Boletos disponibles: @General.Boletos_General</p>
             <div class="form">
                 <div class="input-group">
                     <label for="nombre">Nombre:</label>
@@ -41,16 +42,6 @@
     </div>
 </EditForm>
 
-<p style="color: red;">
-    @if (Boletos.Total_Boletos == 0)
-    {
-        <div style="background-color: #ffdddd; padding: 10px; border: 1px solid red; color: red;">
-            ¡No quedan boletos disponibles en esta zona!
-        </div>
-
-    }
-</p>
-
 @code {
     private int cantidadboletos;
     private General boleto = new General();
@@ -61,13 +52,11 @@
         boleto.Fecha_Compra = DateTime.Now;
         boleto.Numero_correlativo = int.Parse(Transaccion.NoCorrelativo(boleto.DPI, 3));
         boleto.Zona = "General";
-        if (Boletos.Total_Boletos > 0)
+        if (cantidadboletos <= General.Boletos_General)
         {
-            Transaccion.Cola_Transacciones.Enqueue(boleto);
-            Boletos Cola = Transaccion.Cola_Transacciones.Dequeue();
-            General.Total_Boletos = General.Total_Boletos - cantidadboletos;
-            Lista_Boletos_General.Add((General)Cola);
-            localStorage.SetItem("Registro_General", Lista_Boletos_General);
+            Transaccion.Cola_General.Enqueue(boleto);
+
+            ProcesarCola();
         }
     }
 
@@ -80,6 +69,19 @@
         if (savedGeneral != null)
         {
             Lista_Boletos_General = savedGeneral;
+        }
+    }
+
+    private void ProcesarCola()
+    {
+        while (Transaccion.Cola_General.Count > 0)
+        {
+            var siguiente = Transaccion.Cola_General.Dequeue();
+
+            General.Boletos_General -= cantidadboletos;
+            Lista_Boletos_General.Add(siguiente);
+
+            localStorage.SetItem("Registro_Platino", Lista_Boletos_General);
         }
     }
 }
