--- a/Paginas_Boletos/PaginaVip.razor
+++ b/Paginas_Boletos/PaginaVip.razor
@@ -13,6 +13,7 @@
     <div class="Contenedor-sesion">
         <div class="form-container">
             <p class="title">Comprar VIP</p>
+            <p>Boletos disponibles: @VIP.Boletos_Vip</p>
             <div class="form">
                 <div class="input-group">
                     <label for="nombre">Nombre:</label>
@@ -55,14 +56,13 @@
         boleto.Fecha_Compra = DateTime.Now;
         boleto.Numero_correlativo = int.Parse(Transaccion.NoCorrelativo(boleto.DPI, 2));
         boleto.Zona = "Vip";
-        if (Boletos.Total_Boletos > 0)
+        if (cantidadboletos <= VIP.Boletos_Vip)
         {
-            VIP.Total_Boletos = VIP.Total_Boletos - cantidadboletos;
-            Transaccion.Cola_Transacciones.Enqueue(boleto);
-            Boletos Cola = Transaccion.Cola_Transacciones.Dequeue();
-            Lista_Boletos_Vip.Add((VIP)Cola);
+           
 
-            localStorage.SetItem("Registro_Vip", Lista_Boletos_Vip);
+            Transaccion.Cola_Vip.Enqueue(boleto);
+
+            ProcesarCola();
         }
         
 
@@ -77,6 +77,19 @@
         if (savedVip != null)
         {
             Lista_Boletos_Vip = savedVip;
+        }
+    }
+
+    private void ProcesarCola()
+    {
+        while (Transaccion.Cola_Vip.Count > 0)
+        {
+            var siguiente = Transaccion.Cola_Vip.Dequeue();
+
+            VIP.Boletos_Vip -= cantidadboletos;
+            Lista_Boletos_Vip.Add(siguiente);
+
+            localStorage.SetItem("Registro_Platino", Lista_Boletos_Vip);
         }
     }
 }
