--- a/Paginas_Boletos/PaginaTribuna.razor
+++ b/Paginas_Boletos/PaginaTribuna.razor
@@ -12,7 +12,9 @@
     <div class="Contenedor-sesion">
         <div class="form-container">
             <p class="title">Compra Tribuna</p>
+
             <p>Boletos disponibles: @Tribuna.Boletos_Tribuna</p>
+            <p>Ingrese los datos solicitados</p>
             <div class="form">
                 <div class="input-group">
                     <label for="nombre">Nombre:</label>
@@ -34,18 +36,25 @@
             </div>
             <div class="social-message">
                 <div class="line"></div>
-                <p class="message">Ingrese los datos solicitados</p>
+                <p class="message">Se generará un código QR con su número correlativo. Presione 'Descargar' una vez que esté disponible.</p>
                 <div class="line"></div>
             </div>
         </div>
     </div>
 </EditForm>
 
+<div class="imagenQR">
+    <img src="@imagen" />
+    
+</div>
+<a href="@imagen" download="@($"{boleto.Nombre}.png")" class="fancy-button">
+    Descargar
+</a>
 @code {
-    private int cantidadboletos = 0;
+
     private Tribuna boleto = new Tribuna();
     private List<Tribuna> Lista_Boletos_Tribuna = new List<Tribuna>();
-
+    string? imagen;
     private void guardar()
     {
         boleto.Fecha_Compra = DateTime.Now;
@@ -69,6 +78,11 @@
         if (savedTribuna != null)
         {
             Lista_Boletos_Tribuna = savedTribuna;
+            
+        }
+        foreach (var can in Lista_Boletos_Tribuna)
+        {
+            Tribuna.Boletos_Tribuna = 200 - can.cantidad_boletos;
         }
     }
 
@@ -77,7 +91,7 @@
         while (Transaccion.Cola_Tribuna.Count > 0)
         {
             var siguiente = Transaccion.Cola_Tribuna.Dequeue();
-
+            imagen = Transaccion.Generar_QR(siguiente.Numero_correlativo.ToString());
             Tribuna.Boletos_Tribuna -= boleto.cantidad_boletos;
             Lista_Boletos_Tribuna.Add(siguiente);
 
