--- a/Paginas_Boletos/PaginaTribuna.razor.css
+++ b/Paginas_Boletos/PaginaTribuna.razor.css
@@ -2,6 +2,10 @@
     display: flex;
     justify-content: center;
 }
+.imagenQR {
+    margin-top: 100px;
+    margin-bottom: 50px;
+}
 
 .form-container {
     width: 320px;
@@ -125,4 +129,65 @@
     font-size: 0.75rem;
     line-height: 1rem;
     color: rgba(156, 163, 175, 1);
+}
+.fancy-button {
+    position: relative;
+    padding: 10px 20px;
+    border-radius: 7px;
+    border: 1px solid rgb(61, 106, 255);
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 2px;
+    background: transparent;
+    color: #fff;
+    overflow: hidden;
+    text-decoration: none;
+    display: inline-block;
+    transition: all 0.2s ease-in;
+}
+
+    .fancy-button:hover {
+        background: rgb(61, 106, 255);
+        box-shadow: 0 0 30px 5px rgba(0, 142, 236, 0.815);
+        transition: all 0.2s ease-out;
+    }
+
+        .fancy-button:hover::before {
+            animation: sh02 0.5s 0s linear;
+        }
+
+    .fancy-button::before {
+        content: '';
+        display: block;
+        width: 0px;
+        height: 86%;
+        position: absolute;
+        top: 7%;
+        left: 0%;
+        opacity: 0;
+        background: #fff;
+        box-shadow: 0 0 50px 30px #fff;
+        transform: skewX(-20deg);
+    }
+
+@keyframes sh02 {
+    from {
+        opacity: 0;
+        left: 0%;
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+        left: 100%;
+    }
+}
+
+.fancy-button:active {
+    box-shadow: 0 0 0 0 transparent;
+    transition: box-shadow 0.2s ease-in;
 }
